update in the frontend