@@ -1,12 +1,8 @@
 package com.osproject.hotel.service;
 
-
-
 import com.osproject.hotel.model.Booking;
 import com.osproject.hotel.model.Room;
 import com.osproject.hotel.repository.BookingRepository;
-
-import org.jspecify.annotations.Nullable;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,19 +18,16 @@ public class BookingService {
     @Autowired
     private RoomService roomService;
 
-    // Inside BookingService.java, modify createBooking:
     @Transactional
     public Booking createBooking(Booking booking) {
         Room room = roomService.getRoomById(booking.getRoom().getId());
         if (!room.isAvailable()) {
             throw new RuntimeException("Room not available");
         }
-        // Calculate total amount
         long days = java.time.temporal.ChronoUnit.DAYS.between(booking.getCheckInDate(), booking.getCheckOutDate());
         if (days <= 0)
             days = 1;
         booking.setTotalAmount(room.getPricePerNight().multiply(java.math.BigDecimal.valueOf(days)));
-
         booking.setBookingDate(java.time.LocalDate.now());
         booking.setStatus("CONFIRMED");
         room.setAvailable(false);
@@ -42,19 +35,12 @@ public class BookingService {
         return bookingRepository.save(booking);
     }
 
-    // Also add method for recent bookings:
-    public List<Booking> GetRecentBookings(int limit) {
+    public List<Booking> getRecentBookings(int limit) {
         return bookingRepository.findAll().stream()
                 .sorted((b1, b2) -> b2.getBookingDate().compareTo(b1.getBookingDate()))
                 .limit(limit)
-                .toList();
+                .collect(Collectors.toList());
     }
-    public List<Booking> getRecentBookings(int limit) {
-    return bookingRepository.findAll().stream()
-        .sorted((b1, b2) -> b2.getBookingDate().compareTo(b1.getBookingDate()))
-        .limit(limit)
-        .collect(Collectors.toList());
-}
 
     public List<Booking> getAllBookings() {
         return bookingRepository.findAll();
@@ -69,12 +55,9 @@ public class BookingService {
     public void cancelBooking(Long id) {
         Booking booking = getBookingById(id);
         booking.setStatus("CANCELLED");
-
-        // Make room available again
         Room room = roomService.getRoomById(booking.getRoom().getId());
         room.setAvailable(true);
         roomService.saveRoom(room);
-
         bookingRepository.save(booking);
     }
 }
